cpp/InternetExplorerDriver/webdriver.h


struct WebDriver;

typedef struct WebDriver WebDriver;


struct WebElement;

typedef struct WebElement WebElement;


struct ScriptArgs;

typedef struct ScriptArgs ScriptArgs;


struct ScriptResult;

typedef struct ScriptResult ScriptResult;


struct StringWrapper;

typedef struct StringWrapper StringWrapper;


struct ElementCollection;

typedef struct ElementCollection ElementCollection;


struct StringCollection;

typedef struct StringCollection StringCollection;

EXPORT int wdFindElementsByTagName(WebDriver* driver, WebElement* element, const wchar_t* name, ElementCollection** result);


EXPORT int wdFindElementByXPath(WebDriver* driver, WebElement* element, const wchar_t* xpath, WebElement** result);

EXPORT int wdFindElementsByXPath(WebDriver* driver, WebElement* element, const wchar_t* xpath, ElementCollection** result);


// Javascript executing fu
EXPORT int wdNewScriptArgs(ScriptArgs** scriptArgs, int maxLength);

EXPORT int wdAddStringScriptArg(ScriptArgs* scriptArgs, const wchar_t* arg);

EXPORT int wdAddBooleanScriptArg(ScriptArgs* scriptArgs, int trueOrFalse);

EXPORT int wdAddNumberScriptArg(ScriptArgs* scriptArgs, long number);

EXPORT int wdAddDoubleScriptArg(ScriptArgs* scriptArgs, double number);

EXPORT int wdAddElementScriptArg(ScriptArgs* scriptArgs, WebElement* element);

EXPORT int wdExecuteScript(WebDriver* driver, const wchar_t* script, ScriptArgs* scriptArgs, ScriptResult** scriptResultRef);

EXPORT int wdGetScriptResultType(WebDriver* driver, ScriptResult* result, int* type);

EXPORT int wdGetStringScriptResult(ScriptResult* result, StringWrapper** wrapper);

EXPORT int wdGetNumberScriptResult(ScriptResult* result, long* value);

EXPORT int wdGetDoubleScriptResult(ScriptResult* result, double* value);

EXPORT int wdGetBooleanScriptResult(ScriptResult* result, int* value);

EXPORT int wdGetElementScriptResult(ScriptResult* result, WebDriver* driver, WebElement** element);

EXPORT int wdGetArrayLengthScriptResult(WebDriver* driver, ScriptResult* result, int* length);

EXPORT int wdGetArrayItemFromScriptResult(WebDriver* driver,
                                          ScriptResult* result, int index,
                                          ScriptResult** arrayItem);



// Element collection functions
EXPORT int wdcGetElementCollectionLength(ElementCollection* collection, int* length);

EXPORT int wdcGetElementAtIndex(ElementCollection* collection, int index, WebElement** result);

EXPORT int wdcGetStringCollectionLength(StringCollection* collection, int* length);

EXPORT int wdcGetStringAtIndex(StringCollection* collection, int index, StringWrapper** result);



// String manipulation functions
EXPORT int wdStringLength(StringWrapper* string, int* length);

EXPORT int wdFreeString(StringWrapper* string);

EXPORT int wdCopyString(StringWrapper* source, int length, wchar_t* dest);


// Things that should be interactions
EXPORT int wdeMouseDownAt(HWND hwnd, long windowX, long windowY);

EXPORT int wdeMouseUpAt(HWND hwnd, long windowX, long windowY);

EXPORT int wdeMouseMoveTo(HWND hwnd, long duration, long fromX, long fromY, long toX, long toY);