jobbie/src/csharp/webdriver-ie/IE/NativeMethods.cs


        [DllImport("InternetExplorerDriver", CharSet = CharSet.Unicode)]
        internal static extern WebDriverResult wdFindElementsByTagName(SafeInternetExplorerDriverHandle driver, SafeInternetExplorerWebElementHandle element, [MarshalAs(UnmanagedType.LPWStr)] string tagName, ref SafeWebElementCollectionHandle result);

        [DllImport("InternetExplorerDriver", CharSet = CharSet.Unicode)]
        internal static extern WebDriverResult wdFindElementByXPath(SafeInternetExplorerDriverHandle driver, SafeInternetExplorerWebElementHandle element, [MarshalAs(UnmanagedType.LPWStr)] string xpath, ref SafeInternetExplorerWebElementHandle result);

        [DllImport("InternetExplorerDriver", CharSet = CharSet.Unicode)]
        internal static extern WebDriverResult wdFindElementsByXPath(SafeInternetExplorerDriverHandle driver, SafeInternetExplorerWebElementHandle element, [MarshalAs(UnmanagedType.LPWStr)] string xpath, ref SafeWebElementCollectionHandle result);
        #endregion

        #region JavaScript executing functions
        [DllImport("InternetExplorerDriver")]
        internal static extern WebDriverResult wdNewScriptArgs(ref SafeScriptArgsHandle scriptArgs, int maxLength);

        [DllImport("InternetExplorerDriver", CharSet = CharSet.Unicode)]
        internal static extern WebDriverResult wdAddStringScriptArg(SafeScriptArgsHandle scriptArgs, string arg);

        [DllImport("InternetExplorerDriver")]
        internal static extern WebDriverResult wdAddBooleanScriptArg(SafeScriptArgsHandle scriptArgs, int boolean);

        [DllImport("InternetExplorerDriver")]
        internal static extern WebDriverResult wdAddNumberScriptArg(SafeScriptArgsHandle scriptArgs, long param);

        [DllImport("InternetExplorerDriver")]
        internal static extern WebDriverResult wdAddDoubleScriptArg(SafeScriptArgsHandle scriptArgs, double param);

        [DllImport("InternetExplorerDriver")]
        internal static extern WebDriverResult wdAddElementScriptArg(SafeScriptArgsHandle scriptArgs, SafeInternetExplorerWebElementHandle handle);

        [DllImport("InternetExplorerDriver", CharSet = CharSet.Unicode)]
        internal static extern WebDriverResult wdExecuteScript(SafeInternetExplorerDriverHandle driver, string script, SafeScriptArgsHandle scriptArgs, ref SafeScriptResultHandle scriptRes);

        [DllImport("InternetExplorerDriver")]
        internal static extern WebDriverResult wdGetScriptResultType(SafeInternetExplorerDriverHandle driver, SafeScriptResultHandle scriptResult, out int type);

        [DllImport("InternetExplorerDriver", CharSet = CharSet.Unicode)]
        internal static extern WebDriverResult wdGetStringScriptResult(SafeScriptResultHandle scriptResult, ref SafeStringWrapperHandle resultString);

        [DllImport("InternetExplorerDriver")]
        internal static extern WebDriverResult wdGetNumberScriptResult(SafeScriptResultHandle scriptResult, out long resultNumber);

        [DllImport("InternetExplorerDriver")]
        internal static extern WebDriverResult wdGetDoubleScriptResult(SafeScriptResultHandle scriptResult, out double resultDouble);

        [DllImport("InternetExplorerDriver")]
        internal static extern WebDriverResult wdGetBooleanScriptResult(SafeScriptResultHandle scriptResult, out int resultNumber);

        [DllImport("InternetExplorerDriver")]
        internal static extern WebDriverResult wdGetElementScriptResult(SafeScriptResultHandle scriptResult, SafeInternetExplorerDriverHandle driver, out SafeInternetExplorerWebElementHandle value);

        [DllImport("InternetExplorerDriver")]
        internal static extern WebDriverResult wdGetArrayLengthScriptResult(SafeInternetExplorerDriverHandle driver, SafeScriptResultHandle scriptResult, out int arrayLength);

        [DllImport("InternetExplorerDriver")]
        internal static extern WebDriverResult wdGetArrayItemFromScriptResult(SafeInternetExplorerDriverHandle driver, SafeScriptResultHandle scriptResult, int itemIndex, out SafeScriptResultHandle item); 
        #endregion

        #region Element collection functions
        [DllImport("InternetExplorerDriver")]
        internal static extern WebDriverResult wdcGetElementCollectionLength(SafeWebElementCollectionHandle elementCollection, ref int count);

        [DllImport("InternetExplorerDriver")]
        internal static extern WebDriverResult wdcGetElementAtIndex(SafeWebElementCollectionHandle elementCollection, int index, ref SafeInternetExplorerWebElementHandle result);

        [DllImport("InternetExplorerDriver")]
        internal static extern WebDriverResult wdcGetStringCollectionLength(SafeStringCollectionHandle elementCollection, ref int count);

        [DllImport("InternetExplorerDriver")]
        internal static extern WebDriverResult wdcGetStringAtIndex(SafeStringCollectionHandle elementCollection, int index, ref SafeStringWrapperHandle result);
        #endregion

        #region String manipulation functions
        [DllImport("InternetExplorerDriver")]
        internal static extern WebDriverResult wdStringLength(SafeStringWrapperHandle handle, ref int length);

        [DllImport("InternetExplorerDriver")]
        internal static extern WebDriverResult wdFreeString(IntPtr driver);

        [DllImport("InternetExplorerDriver")]
        internal static extern WebDriverResult wdCopyString(SafeStringWrapperHandle handle, int length, [Out, MarshalAs(UnmanagedType.LPWStr)] StringBuilder res);
        #endregion

        #region Things that should be interactions
        [DllImport("InternetExplorerDriver")]
        internal static extern WebDriverResult wdeMouseDownAt(IntPtr hwnd, int windowX, int windowY);

        [DllImport("InternetExplorerDriver")]
        internal static extern WebDriverResult wdeMouseUpAt(IntPtr hwnd, int windowX, int windowY);

        [DllImport("InternetExplorerDriver")]
        internal static extern WebDriverResult wdeMouseMoveTo(IntPtr hwnd, int duration, int fromX, int fromY, int toX, int toY);
        #endregion
    }
}
